<resources>
    <string name="app_name">Inventory</string>
    <string name="hint_product_name">Product Name</string>
    <string name="hint_product_price">Product Price</string>
    <string name="hint_product_quantity">Product Quantity</string>
    <string name="hint_supplier_name">Supplier Name</string>
    <string name="hint_supplier_phone">Supplier Phone</string>
    <string name="text_label_name">Name</string>
    <string name="text_label_price">Price</string>
    <string name="text_label_quantity">Quantity</string>
    <string name="text_label_supplier">Supplier Name</string>
    <string name="text_label_supplier_no">Supplier Phone#</string>
    <string name="button_delete">Delete</string>
    <string name="button_increment"> + </string>
    <string name="button_decrement"> - </string>
    <string name="title_edit">Edit Inventory</string>
    <string name="title_add">Add Inventory</string>
    <string name="sale">Sale</string>
    <string name="supp_default">Supplier</string>
    <string name="name_default">Product Name</string>
    <string name="quantity_default">99</string>
    <string name="empty_view_title_text">No items available</string>
    <string name="empty_view_subtitle_text">Add items to the inventory by clicking the add button below</string>
    <string name="action_save">Save  </string>
    <string name="error_update">Error updating item</string>
    <string name="sale_success">The sale was successful, ID:</string>
    <string name="sale_fail">Error in Sale</string>
    <string name="error_delete">Error deleting item</string>
    <string name="delete_success">Delete successful</string>
    <string name="delete_fail">Cannot Delete</string>
    <string name="increment_save">Quantity incremented, click save</string>
    <string name="decrement_save">Quantity decremented, click save</string>
    <string name="item_na">Item Unavailable</string>
    <string name="err_permission">Please enable permission</string>
    <string name="error_save">Error saving item</string>
    <string name="save_success">Item save with row id: </string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
</resources>