<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_parent">

    <LinearLayout
        style="@style/match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_big">

        <!-- Product Name -->
        <LinearLayout
            style="@style/match_wrap"
            android:orientation="horizontal">

            <TextView
                style="@style/Txt_label"
                android:text="@string/text_label_name" />

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                android:maxLength="50"/>
        </LinearLayout>

        <!-- Product Price -->
        <LinearLayout
            style="@style/match_wrap"
            android:orientation="horizontal">

            <TextView
                style="@style/Txt_label"
                android:text="@string/text_label_price" />

            <EditText
                android:id="@+id/edit_product_price"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_price"
                android:inputType="number"
                android:maxLength="4"/>
        </LinearLayout>

        <!-- Quantity category -->
        <LinearLayout
            android:id="@+id/container_quantity"
            style="@style/match_wrap"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/Txt_label"
                android:text="@string/text_label_quantity" />

            <!-- Weight field -->
            <EditText
                android:id="@+id/edit_product_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_product_quantity"
                android:inputType="number"
                android:maxLength="4"/>
        </LinearLayout>

        <RelativeLayout style="@style/match_parent">

            <Button
                android:id="@+id/decrement_btn"
                style="@style/Txt_style_button"
                android:layout_toStartOf="@+id/increment_btn"
                android:text="@string/button_decrement" />

            <Button
                android:id="@+id/increment_btn"
                style="@style/Txt_style_button"
                android:layout_alignParentEnd="true"
                android:text="@string/button_increment" />
        </RelativeLayout>

        <!-- Supplier Name -->
        <LinearLayout
            style="@style/match_wrap"
            android:orientation="horizontal">

            <TextView
                style="@style/Txt_label"
                android:text="@string/text_label_supplier" />

            <EditText
                android:id="@+id/edit_supplier_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                android:maxLength="50"/>
        </LinearLayout>

        <!-- Supplier Phone no-->
        <LinearLayout
            android:id="@+id/container_phone_number"
            style="@style/match_wrap"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/Txt_label"
                android:text="@string/text_label_supplier_no" />

            <!-- Phone no field -->
            <EditText
                android:id="@+id/edit_supplier_phoneno"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_supplier_phone"
                android:inputType="number"
                android:maxLength="10"/>
        </LinearLayout>

        <Button
            android:id="@+id/delete_button"
            style="@style/Txt_style_button_delete"
            android:layout_gravity="center_horizontal|center"
            android:text="@string/button_delete" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/call_supplier"
            style="@style/wrap_content"
            android:layout_gravity="center_horizontal|center"
            android:layout_margin="@dimen/big_margin"
            android:padding="@dimen/padding_big"
            android:src="@drawable/phone" />

    </LinearLayout>

</ScrollView>